[package]
name = "aht"
version = "0.1.0"
edition = "2021"
readme = "README.md"


[dependencies]
skia-safe = "*"
time = "*"
lightningcss = "*"
v8 = { version = "*", optional = true }
ffmpeg-next = { version = "*" }
bssf = { version = "*", git = "https://github.com/dev-d-e/bssf.git" }
bytes = "*"
getset = "*"
ash = { version = "*", optional = true }
vulkano = { version = "*", optional = true, default-features = false, features = ["macros"] }

[target.'cfg(target_os="linux")'.dependencies]
alsa = "*"

[features]
default = ["vulkan", "js"]
vulkan = ["dep:ash", "dep:vulkano"]
js = ["dep:v8"]
