[package]
name = "aht"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
keywords = ["hypertext", "gui", "web"]
categories = ["gui", "web-programming"]


[dependencies]
time = "*"
v8 = { version = "*", optional = true }
ffmpeg-next = { version = "*" }
getset = "*"
strum = { version = "*", features = ["derive"] }
raw-window-handle = "0.6.2"
log = "*"
env_logger = "*"
slotmap = "*"
tokio = { version = "*", features = ["full"] }
pollster = { version = "*", features = ["macro"] }
image = "*"
url = "*"


[workspace.dependencies]
wgpu = { version = "*", default-features = false, features = ["std", "parking_lot", "wgsl"] }
skia-safe = { version = *", features = ["textlayout", "svg", "skottie", "webp"] }
winit = { version = "*", default-features = false, features = ["rwh_06"] }

[target.'cfg(target_os="linux")'.dependencies]
ash = { version = "*" }
wgpu = { workspace = true, features = ["vulkan"] }
skia-safe = { workspace = true, features = ["vulkan", "wayland"] }
alsa = "*"
winit = { workspace = true, optional = true, features = ["wayland", "wayland-csd-adwaita"] }
vulkano = { version = "*", default-features = false, features = ["macros"] }


[features]
default = ["js", "window"]
js = ["dep:v8"]
window = ["dep:winit"]
